2008-10-02  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (inhibit-frame-set-background-mode): New var.
	(frame-set-background-mode): Use it to avoid a loop in
	face-spec-recalc.

2008-10-02  Glenn Morris  <rgm@gnu.org>

	* vc-bzr.el (vc-bzr-diff): Use vc-switches rather than the obsolete
	vc-diff-switches.

2008-10-01  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Eliminate whitespace-kill-buffer-hook functionality,
	that is, to take some action when a buffer is killed.  Suggested by
	Stefan Monnier <monnier@iro.umontreal.ca>.  Doc fix.  New version
	11.2.2.
	(whitespace-action): Docstring and :type fix.
	(whitespace-turn-on, whitespace-turn-off, whitespace-warn-read-only):
	Code fix.
	(whitespace-add-local-hook, whitespace-remove-local-hook)
	(whitespace-kill-buffer-hook, whitespace-action): Fun eliminated.

2008-10-01  Magnus Henoch  <mange@freemail.hu>

	* net/tls.el (open-tls-stream): Show the actual command being
	executed, instead of the format string.

2008-10-01  Eli Zaretskii  <eliz@gnu.org>

	* term/internal.el (dos-locale-alist): New alist.
	(dos-codepage-setup): Use it to compute a value of locale with
	which to call set-locale-environment.  Remove code to set
	terminal, keyboard, and file-name encoding (done by
	set-locale-environment).

	* international/mule-cmds.el
	(set-language-environment-nonascii-translation): Fix nonascii
	value for `pc' ``window-system''.
	(set-display-table-and-terminal-coding-system)
	(set-default-coding-systems): Don't special-case `pc'.

2008-10-01  Glenn Morris  <rgm@gnu.org>

	* filesets.el (filesets-menu-name): Fix type.
	(filesets-menu-path, filesets-menu-before): Fix types.
	Change defaults to be consistent with recentf.  (Bug#1056)

2008-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term/xterm.el (xterm-turn-on-modify-other-keys)
	(xterm-turn-off-modify-other-keys, xterm-remove-modify-other-keys):
	Don't forget to pass `terminal' to `send-string-to-terminal'.
