@@ -1,3 +1,8 @@
+2008-10-03  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-dir.el (vc-dir-mode): Don't create the ewoc header here.
+	(vc-dir-refresh): Set it here instead.  (Bug#1067)
+
 2008-10-02  Chong Yidong  <cyd@stupidchicken.com>
 
 	* faces.el (inhibit-frame-set-background-mode): New var.
